data added with seed + internationalisation of dates + displaying of hours in the show ok

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -43,6 +43,7 @@ fr:
       default: "%d/%m/%Y"
       long: "%-d %B %Y"
       short: "%-d %b"
+      very_short: "%A"
     month_names:
     -
     - janvier
